# keepass_one

./: .gitignore  CLAUDE.md  Makefile  README.md  pubspec.yaml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: database.dart  settings.dart
lib/pages/: home.dart
lib/pages/db_add/: driver_select.dart  webdav_settings.dart
lib/pages/db_index/: db_index.dart
lib/pages/file_selector/: file_selector_page.dart  webdav_settings.dart
lib/pages/kdbx_add/: kdbx_source_selector.dart  webdav_settings.dart
lib/pages/kdbx_database/: kdbx_file_page.dart  kdbx_key_file_page.dart  kdbx_unlock_page.dart
lib/pages/kdbx_selector/: kdbx_add.dart  kdbx_selector.dart
lib/services/database/: dao.dart  dao.g.dart  database.dart  database.g.dart  entity.dart  kdbx.dart  kdbx_dao.dart  kdbx_dao.g.dart  kdbx_file.dart  kdbx_key_file.dart
lib/services/file_system/: file_system_models.dart  file_system_provider.dart
lib/services/sync/: driver_config.dart  driver_factory.dart  exceptions.dart  models.dart  sync_driver.dart
lib/services/webdav/: auth.dart  file.dart  file.freezed.dart  webdav_client.dart  webdav_dio.dart  xml.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: kdbx.dart
lib/utils/: hash.dart  path_provider.dart  platform.dart  throttle.dart  url_utils.dart
lib/widgets/: loading.dart  sheet.dart
lib/widgets/file_picker/: file_picker.dart  file_picker_provider.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  demo.xml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: kdbx.rs  mod.rs  simple.rs
rust/src/crypto/: ciphers.rs  errors.rs  hash.rs  kdf.rs  memory_crypt.rs  mod.rs  sec_buff.rs  secure_data.rs
rust/src/kdbx/: LICENSE  compression.rs  config.rs  error.rs  keys.rs  mod.rs
rust/src/kdbx/db/: kdbx.rs  kdbx4.rs  mod.rs  variant_dictionary.rs  version.rs
rust/src/kdbx/db/kdbx4/: config.rs  errors.rs  header.rs  hmac.rs  inner_header.rs  kdbx4.rs  kdbx4_header.rs  mod.rs
rust/src/kdbx/db/kdbx4/header_entity/: binary_content.rs  compression.rs  encryption_algorithm.rs  inner_encryption_algorithm.rs  kdf_config.rs  mod.rs  variant_dictionary.rs
rust/src/kdbx/otp/: mod.rs  rfc6238.rs  steam.rs
rust/src/kdbx/xml/: database.rs  entities.rs  errors.rs  mod.rs  protected_value.rs  xml.rs
rust/src/kdbx/xml/entities/: auto_type.rs  custom_data.rs  custom_icon.rs  entry.rs  group.rs  history.rs  kee_pass_document.rs  keepass_file.rs  memory_protection.rs  meta.rs  mod.rs  protected_binary.rs  root.rs  string_field.rs  t_types.rs  times.rs  value.rs
rust/src/sync/: mod.rs
rust/src/sync/webdav/: mod.rs  objs.rs  path_mapper.rs
rust/src/utils/: crypto.rs  cursor_utils.rs  mod.rs  writer.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_keepass_one.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_keepass_one.podspec
rust_builder/windows/: CMakeLists.txt
test/: test_sync_webdav.dart
test/utils/: url_utils_test.dart  webdav.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+13 files in other folders)
