[package]
name = "rust_lib_keepass_one"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.98"
thiserror = "2.0.12"
byteorder = "1.5.0"
hex-literal = "1.0.0"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
base64 = "0.22.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
aes = "0.8.4"
generic-array = "0.14.7"
rust-argon2 = "3.0.0"
hmac = "0.12.1"
flate2 = "1.1.2"
cbc = "0.1.2"
cipher = { version = "0.4.4", features = ["std"] }
block-padding = "0.3.3"
twofish = "0.7.1"
chacha20 = "0.9.1"
salsa20 = "0.10.2"
hex = "0.4.3"
serde = { version = "1.0.226", features = ["derive"] }
quick-xml = { version = "0.38.3", features = ["serialize", "overlapped-lists"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
secrecy = "0.10.3"
zeroize = { version = "1.8.1", features = ["derive"] }
serde_with = { version = "3.9.0", features = ["macros"] }
dashmap = "6.1.0"
getrandom = { version = "0.3", features = ["std"] }
url = "2.5.7"
data-encoding = "2.6.0"
bytes = "1.10.1"
futures = "0.3"
dotenv = "0.15.0"
log = "0.4.28"
env_logger = "0.11.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
